<resources>
    <string name="app_name">MvpDemo</string>
    <string name="action_settings">Settings</string>

    <string name="error_missing_email">Missing email</string>
    <string name="error_missing_password">Missing password</string>
    <string name="error_input_email">Please enter a valid email address</string>
    <string name="error_password_length">Password must be at least 6 characters</string>
    <string name="main_activity_title">Home</string>
    <string name="error_login_failed">Invalid Username Or Password</string>


</resources>
